--- a/linux_driver/module/hellomodule/Makefile
+++ b/linux_driver/module/hellomodule/Makefile
@@ -2,9 +2,9 @@ KERNEL_DIR=../../../kernel/
 
 ARCH=arm64
 CROSS_COMPILE=aarch64-linux-gnu-
-export  ARCH  CROSS_COMPILE
+export  ARCH  CROSS_COMPILE		//导出环境变量确保编译器一致，也避免了重复调用
 
-obj-m := hellomodule.o
+obj-m := hellomodule.o	//
 all:
 	$(MAKE) -C $(KERNEL_DIR) M=$(CURDIR) modules
 
